backend/deploy/testdata/zz_fixture_TestHelmTemplate_dev_westus3_svc_1_aro_hcp_backend_dev.yaml
---
# Source: backend/templates/metrics.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aro-hcp-backend
    port: metrics
  name: aro-hcp-backend-metrics
  namespace: 'aro-hcp'
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
    name: metrics
  selector:
    app: aro-hcp-backend
---
# Source: backend/templates/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aro-hcp-backend
  name: aro-hcp-backend
  namespace: 'aro-hcp'
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aro-hcp-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aro-hcp-backend
        azure.workload.identity/use: "true"
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: 'topology.kubernetes.io/zone'
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: aro-hcp-backend
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: aro-hcp-backend
      serviceAccountName: 'backend'
      containers:
      - name: aro-hcp-backend
        image: 'arohcpsvcdev.azurecr.io/arohcpbackend@sha256:1234567890'
        imagePullPolicy: Always
        args: ["--clusters-service-url", "http://clusters-service.clusters-service.svc.cluster.local:8000"]
        ports:
        - containerPort: 8081
          protocol: TCP
        - containerPort: 8083
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 500Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8083
          initialDelaySeconds: 5
          periodSeconds: 10
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
# Source: backend/templates/allow-metrics.authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-metrics-backend
  namespace: 'aro-hcp'
spec:
  action: "ALLOW"
  rules:
  - to:
    - operation:
        paths: ["/metrics"]
        methods: ["GET"]
        ports: ["8081"]
  selector:
    matchLabels:
      app: "aro-hcp-backend"
---
# Source: backend/templates/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: aro-hcp-backend-metrics
  namespace: 'aro-hcp'
spec:
  selector:
    matchLabels:
      app: aro-hcp-backend
  portLevelMtls:
    8081:
      mode: PERMISSIVE
